fix: Avatar z-index to 50, moves to 15px from top, fix logo aspect ratio

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@ html, body {
     transform: scale(1);
   }
   to {
-    top: -24px;
+    top: 15px;
     transform: scale(1.15);
   }
 }
